fixed select display on mobile

--- a/assets/styles/components/_form-elements.sass
+++ b/assets/styles/components/_form-elements.sass
@@ -8,6 +8,8 @@ select
   appearance: none
   display: block
   width: 100%
+  color: color('black')
+  background-color: color('cc-teal')
 
 .select-wrapper
   position: relative
